components/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  labels:
    app: n8n
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/backend-protocol: HTTP
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
    - host: n8n.192.168.1.23.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-service
                port:
                  number: 5678
